// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebViewScreen Instances PrivacyPolicy matches snapshot 1`] = `
<iframe
  frameBorder="0"
  onLoad={[Function]}
  seamless={true}
  src="https://community.gooddollar.org/pp/"
  style={
    Object {
      "flex": 1,
    }
  }
  title="Privacy Policy"
/>
`;

exports[`WebViewScreen Instances TermsOfUse matches snapshot 1`] = `
<iframe
  frameBorder="0"
  onLoad={[Function]}
  seamless={true}
  src="https://community.gooddollar.org/dappterms/"
  style={
    Object {
      "flex": 1,
    }
  }
  title="Terms of Use"
/>
`;

exports[`WebViewScreen matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  allowpaymentrequest="true"
  frameBorder="0"
  seamless={true}
  src="sourceUrl"
  style={
    Object {
      "borderBottomWidth": "0px",
      "borderLeftWidth": "0px",
      "borderRightWidth": "0px",
      "borderTopWidth": "0px",
      "height": "100%",
      "overflowX": "hidden",
      "overflowY": "hidden",
      "width": "100%",
    }
  }
/>
`;

exports[`WebViewScreen matches snapshot 2`] = `
<iframe
  allowFullScreen={true}
  allowpaymentrequest="true"
  frameBorder="0"
  seamless={true}
  src="https://community.gooddollar.org/terms/"
  style={
    Object {
      "borderBottomWidth": "0px",
      "borderLeftWidth": "0px",
      "borderRightWidth": "0px",
      "borderTopWidth": "0px",
      "height": "100%",
      "overflowX": "hidden",
      "overflowY": "hidden",
      "width": "100%",
    }
  }
/>
`;
